# PythonExtensions

./: .gitattributes  .gitignore  LICENSE.txt  README.md
Modules/PythonExt_Archive/: README.md  __init__.py  archive_general_tools.py  archive_logger.py  archive_tar.py  archive_types.py  pyproject.toml
Modules/PythonExt_ArchiveTar/: README.md  __init__.py  archive_tar.py
Modules/PythonExt_FilesystemTools/: Filesystem.py  FilesystemExceptions.py  README.md  __init__.py  filesystem.py  filesystem_aux.py  filesystem_exceptions.py  filesystem_path.py  filesystem_types.py  pyproject.toml
Modules/PythonExt_ProgressBar/: README.md  __init__.py  progressBar.py  pyproject.toml
